Created Exception Classes

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -2,3 +2,8 @@
 /Translator.class
 /Test3.class
 /Data.class
+/fromTest.class
+/testVarAss.class
+/FormattingError.class
+/ConditionalNoMatch.class
+/UndefinedVariable.class
